--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Reddit Top Posts</string>
     <string name="title_item_detail">Item Detail</string>
+    <string name="comments_count">%d comments</string>
+    <string name="author">Posted by %s %s</string>
 </resources>
